More media added to media folder, BIG THING - VIDEO PLAYER at home + about and donors page updated to prettier

--- a/web pages/About/Donors_and_Sponsors.html
+++ b/web pages/About/Donors_and_Sponsors.html
@@ -36,7 +36,7 @@
 
     <title>Donors and Sponsors</title>
   </head>
-<body>
+<body class="bg-black">
     <!--TODO: Update Active classes on links if applicable-->
     <!--TODO: We can decide to use dropdowns or another popup or make them click through.-->
     <!--NAVBAR-->
@@ -87,106 +87,151 @@
 
 <hr>
 
-<div class="container">
-<h2 class="text-center">Pathway Level<br>($10,000 and Above)</h2>
-<ul class="list-group list-group-flush">
-  <li class="list-group-item">R.W. Deutsch Foundation</li>
-  <li class="list-group-item">Becton Dickinson, Inc.</li>
-  <li class="list-group-item">VWR Foundation</li>
-</ul>
+<div class="container card">
+    <br>
+    <h2 class="text-center">Pathway Level<br>($10,000 and Above)</h2>
+    <hr>
+    <div class="row">
+      <div class="col">
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">R.W. Deutsch Foundation</li>
+          <li class="list-group-item">Becton Dickinson, Inc.</li>
+          <li class="list-group-item">VWR Foundation</li>
+        </ul>
+      </div>
+      <div class="col d-flex flex-wrap align-items-center">
+        <img src="../../media/PathwayLevel.png" alt="PathwayLevelImage">
+      </div>
+  </div>
 </div>
 
 <br>
 
-<div class="container">
-<h2 class="text-center">Gene Level<br>($1,000 – 10,000)</h2>
-<ul class="list-group list-group-flush">
-  <li class="list-group-item">American Society for Biochemistry and Molecular Biology</li>
-  <li class="list-group-item">Nina Arendtsz</li>
-  <li class="list-group-item">AstraZeneca, Inc.</li>
-  <li class="list-group-item">John W Baty</li>
-  <li class="list-group-item">Tom Burkett and Sue Lautar</li>
-  <li class="list-group-item">Virginia T. Campbell Foundation</li>
-  <li class="list-group-item">Deborah Cohen</li>
-  <li class="list-group-item">Neiyer Correal</li>
-  <li class="list-group-item">Family League</li>
-  <li class="list-group-item">John J. Leidy Foundation</li>
-  <li class="list-group-item">Northrup Grumman ECHO</li>
-  <li class="list-group-item">Royal DSM North America, Inc.</li>
-  <li class="list-group-item">Forrest Spencer</li>
-  <li class="list-group-item">Steve Stowell</li>
-</ul>
+<div class="container card">
+  <br>
+  <h2 class="text-center">Gene Level<br>($1,000 – 10,000)</h2>
+  <hr>
+  <div class="row">
+    <div class="col d-flex flex-wrap align-items-center">
+      <img src="../../media/GeneLevelLogo.png" alt="PathwayLevelImage">
+    </div>
+  <div class="col">
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">American Society for Biochemistry and Molecular Biology</li>
+    <li class="list-group-item">Nina Arendtsz</li>
+    <li class="list-group-item">AstraZeneca, Inc.</li>
+    <li class="list-group-item">John W Baty</li>
+    <li class="list-group-item">Tom Burkett and Sue Lautar</li>
+    <li class="list-group-item">Virginia T. Campbell Foundation</li>
+    <li class="list-group-item">Deborah Cohen</li>
+    <li class="list-group-item">Neiyer Correal</li>
+    <li class="list-group-item">Family League</li>
+    <li class="list-group-item">John J. Leidy Foundation</li>
+    <li class="list-group-item">Northrup Grumman ECHO</li>
+    <li class="list-group-item">Royal DSM North America, Inc.</li>
+    <li class="list-group-item">Forrest Spencer</li>
+    <li class="list-group-item">Steve Stowell</li>
+  </ul>
+</div>
+</div>
 </div>
 
 <br>
 
-<div class="container">
-<h2 class="text-center">Promoter Level<br>($100 – 1,000)</h2>
-<ul class="list-group list-group-flush">
-  <li class="list-group-item">Jason  and Holly Coleman</li>
-  <li class="list-group-item">Glenn Comisac</li>
-  <li class="list-group-item">Jessica Eisner</li>
-  <li class="list-group-item">Lawrence Fitzpatrick</li>
-  <li class="list-group-item">David and Cindi Gray</li>
-  <li class="list-group-item">Anne Hamburger</li>
-  <li class="list-group-item">Helen Dooley</li>
-  <li class="list-group-item">William Hyatt</li>
-  <li class="list-group-item">Alex Kambis</li>
-  <li class="list-group-item">Fabian Kolker Foundation</li>
-  <li class="list-group-item">Patricia Larrabee</li>
-  <li class="list-group-item">J. Casey Lippmeier</li>
-  <li class="list-group-item">Alicia Lucksted</li>
-  <li class="list-group-item">Stosh Misiaszek</li>
-  <li class="list-group-item">Dileep Monie</li>
-  <li class="list-group-item">Amy Raehse</li>
-  <li class="list-group-item">David Rozak</li>
-  <li class="list-group-item">Nathan and Lisa Scheifele</li>
-  <li class="list-group-item">Chapin Spencer</li>
-  <li class="list-group-item">Edmund Wonilowicz</li>
-  <li class="list-group-item">Brad Zynda</li>
-</ul>
+<div class="container card">
+  <br>
+  <h2 class="text-center">Promoter Level<br>($100 – 1,000)</h2>
+  <hr>
+  <div class="row">
+    <div class="col">
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">Jason  and Holly Coleman</li>
+        <li class="list-group-item">Glenn Comisac</li>
+        <li class="list-group-item">Jessica Eisner</li>
+        <li class="list-group-item">Lawrence Fitzpatrick</li>
+        <li class="list-group-item">David and Cindi Gray</li>
+        <li class="list-group-item">Anne Hamburger</li>
+        <li class="list-group-item">Helen Dooley</li>
+        <li class="list-group-item">William Hyatt</li>
+        <li class="list-group-item">Alex Kambis</li>
+        <li class="list-group-item">Fabian Kolker Foundation</li>
+        <li class="list-group-item">Patricia Larrabee</li>
+        <li class="list-group-item">J. Casey Lippmeier</li>
+        <li class="list-group-item">Alicia Lucksted</li>
+        <li class="list-group-item">Stosh Misiaszek</li>
+        <li class="list-group-item">Dileep Monie</li>
+        <li class="list-group-item">Amy Raehse</li>
+        <li class="list-group-item">David Rozak</li>
+        <li class="list-group-item">Nathan and Lisa Scheifele</li>
+        <li class="list-group-item">Chapin Spencer</li>
+        <li class="list-group-item">Edmund Wonilowicz</li>
+        <li class="list-group-item">Brad Zynda</li>
+      </ul>
+  </div>
+  <div class="col d-flex flex-wrap align-items-center">
+    <img src="../../media/Promotor Level.png" alt="">
+  </div>
+</div>
 </div>
 
 <br>
 
-<h2 class="text-center">Nucleotide Level<br>(Up to $100)</h2>
-<div class="container">
-<ul class="list-group list-group-flush">
-  <li class="list-group-item">Oussama Benalla</li>
-  <li class="list-group-item">Anna Cohee</li>
-  <li class="list-group-item">Scott Foerster</li>
-  <li class="list-group-item">Mary Gallagher</li>
-  <li class="list-group-item">Carrie Gibson</li>
-  <li class="list-group-item">Kathleen Gillespie</li>
-  <li class="list-group-item">Gerald Knight</li>
-  <li class="list-group-item">Michele Markwardt</li>
-  <li class="list-group-item">Daniel O’Leary</li>
-  <li class="list-group-item">Stuart Ray</li>
-  <li class="list-group-item">Kathryn Requardt</li>
-  <li class="list-group-item">Tim Schulz</li>
-  <li class="list-group-item">Ronald Turochy</li>
-  <li class="list-group-item">Tamara Walsky</li>
-  <li class="list-group-item">Corey Webster</li>
-  <li class="list-group-item">Walter Zimbeck</li>
-</ul>
+<div class="container card">
+  <br>
+  <h2 class="text-center">Nucleotide Level<br>(Up to $100)</h2>
+  <hr>
+  <div class="row">
+    <div class="col d-flex flex-wrap align-items-center">
+      <img src="../../media/NucleotideLevel.png" alt="">
+    </div>
+    <div class="col">
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">Oussama Benalla</li>
+        <li class="list-group-item">Anna Cohee</li>
+        <li class="list-group-item">Scott Foerster</li>
+        <li class="list-group-item">Mary Gallagher</li>
+        <li class="list-group-item">Carrie Gibson</li>
+        <li class="list-group-item">Kathleen Gillespie</li>
+        <li class="list-group-item">Gerald Knight</li>
+        <li class="list-group-item">Michele Markwardt</li>
+        <li class="list-group-item">Daniel O’Leary</li>
+        <li class="list-group-item">Stuart Ray</li>
+        <li class="list-group-item">Kathryn Requardt</li>
+        <li class="list-group-item">Tim Schulz</li>
+        <li class="list-group-item">Ronald Turochy</li>
+        <li class="list-group-item">Tamara Walsky</li>
+        <li class="list-group-item">Corey Webster</li>
+        <li class="list-group-item">Walter Zimbeck</li>
+      </ul>
+</div>
+</div>
 </div>
 
 <br>
 
-<h2 class="text-center">Nucleic Acid Level<br>(In-kind donations)</h2>
-<div class="container">
-<ul class="list-group list-group-flush">
-  <li class="list-group-item">Genessee Scientific, Inc.</li>
-  <li class="list-group-item">Giant Foods, Inc.</li>
-  <li class="list-group-item">Hach, Inc.</li>
-  <li class="list-group-item">New England Biolabs, Inc.</li>
-  <li class="list-group-item">Qiagen, Inc.</li>
-  <li class="list-group-item">Stellar Scientific, Inc.</li>
-  <li class="list-group-item">USA Scientific, Inc.</li>
-</ul>
+<div class="container card">
+  <br>
+  <h2 class="text-center">Nucleic Acid Level<br>(In-kind donations)</h2>
+  <hr>
+  <div class="row">
+    <div class="col">
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">Genessee Scientific, Inc.</li>
+        <li class="list-group-item">Giant Foods, Inc.</li>
+        <li class="list-group-item">Hach, Inc.</li>
+        <li class="list-group-item">New England Biolabs, Inc.</li>
+        <li class="list-group-item">Qiagen, Inc.</li>
+        <li class="list-group-item">Stellar Scientific, Inc.</li>
+        <li class="list-group-item">USA Scientific, Inc.</li>
+      </ul>
+    </div>
+  <div class="col d-flex flex-wrap align-items-center">
+    <img src="../../media/NucleicAcidLevel.jpg" alt="">
+  </div>
+</div>
 </div>
 
-
+<br>
 
 
 
