--- a/web pages/Kids/Kids_Landing.html
+++ b/web pages/Kids/Kids_Landing.html
@@ -96,7 +96,17 @@
   <br>
 </div>
 
+<div class="container">
+  <h3>YOUTH PROGRAMS</h3>
+</div>
 
+<div class="container">
+  <h3>Education Brochure</h3>
+</div>
+
+<div class="container">
+
+</div>
 
 
 
