Fixed some of the linkage issues with About and Donor Page

--- a/web pages/About/Donors_and_Sponsors.html
+++ b/web pages/About/Donors_and_Sponsors.html
@@ -36,7 +36,7 @@
 
     <title>Donors and Sponsors</title>
   </head>
-<body class="bg-black">
+<body>
     <!--TODO: Update Active classes on links if applicable-->
     <!--TODO: We can decide to use dropdowns or another popup or make them click through.-->
     <!--NAVBAR-->
@@ -85,7 +85,7 @@
       </div>
     </nav>
 
-<hr>
+    <br>
 
 <div class="container card">
     <br>
