kids page and evventbrite tests

--- a/template.html
+++ b/template.html
@@ -163,7 +163,7 @@
           <a href="https://www.instagram.com/bugsslab/" class="fa fa-instagram text-decoration-none"></a>
         </div>
         <div class="col text-secondary">
-        Email: <a class="link-light" href="mailto:info@bugssonline.org">info@bugssonline.org</a>
+        Email<br> <a class="link-light" href="mailto:info@bugssonline.org">info@bugssonline.org</a>
          </div>
           </div>
     </footer>
