--- a/web pages/About/Donors_and_Sponsors.html
+++ b/web pages/About/Donors_and_Sponsors.html
@@ -60,10 +60,14 @@
           <li class="nav-item">
             <a class="nav-link" href="../Membership/Membership_Landing.html">Membership</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="../Projects_Landing_page.html">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="../Projects/Projects_Landing.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Group Projects
             </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="../Projects/Scramble_Synthetic_Yeast.html">Scramble and Synthetic Yeast</a>
+              <a class="dropdown-item" href="../Projects/Barcoding_The_Harbor.php">Barcoding The Harbor</a>
+            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../Scientists/Scientists_Landing.html">For Scientists</a>
@@ -84,7 +88,12 @@
         </form>-->
       </div>
     </nav>
+    <ul class="nav nav-fill nav-pills bg-primary">
 
+      <a class="nav-item nav-link text-white rounded-0" href="About_Landing_Page.html">Become a Member</a>
+      <a class="nav-item nav-link text-white active rounded-0" href="Donors_and_Sponsors.html">Donors and Sponsors</a>
+      <a class="nav-item nav-link text-white rounded-0" href="FAQs.html">FAQs</a>
+    </ul>
     <br>
 
 <div class="container card">
