--- a/web pages/About/About_Landing_Page.html
+++ b/web pages/About/About_Landing_Page.html
@@ -48,14 +48,11 @@
 
       <div class="collapse navbar-collapse" id="navbarColor02">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="About/About_Landing_Page.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <li class="nav-item active">
+            <a class="nav-link" href="../About/About_Landing_Page.html">
               About
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="../About/Donors_and_Sponsors.html">Donors and Sponsors</a>
-              <a class="dropdown-item" href="../About/FAQs.html">FAQ</a>
-            </div>
+
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../Membership/Membership_Landing.html">Membership</a>
