Fixed navigation issues for barcoding project page linkage, fixed some clipping isses, in several pgs and display

--- a/web pages/index.html
+++ b/web pages/index.html
@@ -136,11 +136,15 @@
           <li class="nav-item">
             <a class="nav-link" href="Membership/Membership_Landing.html">Membership</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Projects_Landing_page.html">
-              Group Projects
-            </a>
-          </li>
+          <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="Projects/Projects_Landing.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Group Projects
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="Projects/Scramble_Synthetic_Yeast.html">Scramble and Synthetic Yeast</a>
+            <a class="dropdown-item" href="Projects/Barcoding_The_Harbor.php">Barcoding The Harbor</a>
+          </div>
+        </li>
           <li class="nav-item">
             <a class="nav-link" href="Scientists/Scientists_Landing.html">For Scientists</a>
           </li>
@@ -159,7 +163,7 @@
 
     <div class="row hero-image" id="home">
       <div class="container-fluid hero-text">
-        <h1 class="text-white display-4" style="font-size:7vw;"><span class="bg-primary p-2"><b>BUGSS</b></span> Baltimore Underground Science Space</h1>
+        <h1 class="text-white display-4" style="max-height:7vw;"><span class="bg-primary px-2"><b>BUGSS</b></span> Baltimore Underground Science Space</h1>
       </div>
     </div>
 
