enterprenur page done

--- a/web pages/Membership/Membership_Landing.html
+++ b/web pages/Membership/Membership_Landing.html
@@ -91,15 +91,15 @@
     </nav>
     <ul class="nav nav-fill nav-pills bg-primary">
 
-      <a class="nav-item nav-link text-white active rounded-0" href="#">Become a Member</a>
-      <a class="nav-item nav-link text-white" href="#">Entrepreneur Program</a>
+      <a class="nav-item nav-link text-white active rounded-0" href="../Membership/Membership_Landing.html">Become a Member</a>
+      <a class="nav-item nav-link text-white" href="../Membership/EntreprenuerProgram.html">Entrepreneur Program</a>
     </ul>
     <div class="bg-light container-fluid">
       <h1 class="pt-3">Become a BUGSS Member</h1>
       <p>
         BUGSS offers several levels of membership for those who are interested in joining our community.
       </p>
-      <p>For entrepreneurs who are looking for lab access without engaging in other community activities, see our <a href="#"> Entrepreneur program</a>.
+      <p>For entrepreneurs who are looking for lab access without engaging in other community activities, see our <a href="../Membership/EntreprenuerProgram.html"> Entrepreneur program</a>.
       <p class="lead"> In addition to paying online through the links below, please fill out the <a href=""> BUGSS Membership Agreement </a> and contact Lisa Scheifele (<a
           href="mailto:lscheifele@bugssonline.org">lscheifele@bugssonline.org</a>) to set up a New Member Orientation meeting.
 
