Fixed some linkages, completed initial child's page, added brochure media

--- a/web pages/About/Donors_and_Sponsors.html
+++ b/web pages/About/Donors_and_Sponsors.html
@@ -45,7 +45,7 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
- 
+
       <div class="collapse navbar-collapse" id="navbarColor02">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
@@ -91,6 +91,16 @@
       <a class="nav-item nav-link text-white rounded-0" href="FAQs.html">FAQs</a>
     </ul>
     <br>
+
+
+    <div class="container "style="position:center;" >
+        <div class="jumbotron bg-primary shadow">
+          <div class="lead text-light">
+            <p> We appreciate all of our donors and couldn’t do what we do without the amazing support of our community. Thanks! </p>    
+          </div>
+        </div>
+    </div>
+
 
 <div class="container card">
     <br>
