--- a/web pages/Projects/Scramble_Synthetic_Yeast.html
+++ b/web pages/Projects/Scramble_Synthetic_Yeast.html
@@ -58,10 +58,14 @@
           <li class="nav-item">
             <a class="nav-link" href="../Membership/Membership_Landing.html">Membership</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="Projects_Landing_page.html">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="../Projects/Projects_Landing.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Group Projects
             </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="../Projects/Scramble_Synthetic_Yeast.html">Scramble and Synthetic Yeast</a>
+              <a class="dropdown-item" href="../Projects/Barcoding_The_Harbor.php">Barcoding The Harbor</a>
+            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../Scientists/Scientists_Landing.html">For Scientists</a>
@@ -85,7 +89,7 @@
 
     <ul class="nav nav-fill nav-pills bg-primary mb-3">
       <li class="nav-item">
-        <a class="nav-link text-white" href="Barcoding_The_Harbor.php">Barcoding the Harbor</a>
+        <a class="nav-link text-white" href="Projects/Barcoding_The_Harbor.php">Barcoding the Harbor</a>
       </li>
       <li class="nav-item">
         <a class="nav-link text-white active rounded-0" href="Scramble_Synthetic_Yeast.html">Scramble and Synthetic Yeast</a>
