--- a/web pages/Projects/Scramble_Synthetic_Yeast.html
+++ b/web pages/Projects/Scramble_Synthetic_Yeast.html
@@ -89,7 +89,7 @@
 
     <ul class="nav nav-fill nav-pills bg-primary mb-3">
       <li class="nav-item">
-        <a class="nav-link text-white" href="Projects/Barcoding_The_Harbor.php">Barcoding the Harbor</a>
+        <a class="nav-link text-white" href="Barcoding_The_Harbor.php">Barcoding the Harbor</a>
       </li>
       <li class="nav-item">
         <a class="nav-link text-white active rounded-0" href="Scramble_Synthetic_Yeast.html">Scramble and Synthetic Yeast</a>
