Selectable card info with collapsing correct info finally working

--- a/web pages/About/About_Landing_Page.html
+++ b/web pages/About/About_Landing_Page.html
@@ -45,7 +45,7 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
- 
+
       <div class="collapse navbar-collapse" id="navbarColor02">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
@@ -87,7 +87,7 @@
     </nav>
     <ul class="nav nav-fill nav-pills bg-primary mb-3">
 
-      <a class="nav-item nav-link text-white active rounded-0" href="About_Landing_Page.html">Become a Member</a>
+      <a class="nav-item nav-link text-white active rounded-0" href="About_Landing_Page.html">About BUGSS</a>
       <a class="nav-item nav-link text-white rounded-0" href="Donors_and_Sponsors.html">Donors and Sponsors</a>
       <a class="nav-item nav-link text-white rounded-0" href="FAQs.html">FAQs</a>
     </ul>
