nav bar updates and minor bug fixes

--- a/html/About/FAQs.html
+++ b/html/About/FAQs.html
@@ -54,7 +54,6 @@
             <a class="nav-link" href="../About/About_Landing_Page.html">
               About
             </a>
-
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../Membership/Membership_Landing.html">Membership</a>
@@ -64,6 +63,7 @@
               Group Projects
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="../Projects/Projects_Landing.html">Group Projects Home</a>
               <a class="dropdown-item" href="../Projects/Scramble_Synthetic_Yeast.html">Scramble and Synthetic Yeast</a>
               <a class="dropdown-item" href="../Projects/Barcoding_The_Harbor.php">Barcoding The Harbor</a>
             </div>
