--- a/html/Community/Community_Landing.html
+++ b/html/Community/Community_Landing.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <!-- set viewport to screen size -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"><meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
 
     <!-- Master Stylesheet -->
     <link rel="stylesheet" href="../../css/SASS/BUGSS_Styles.css">
@@ -10,8 +11,6 @@
     <script src="https://code.jquery.com/jquery-3.5.0.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-
 
     <!-- Favicon Settings for Different Devices -->
     <link rel="apple-touch-icon" sizes="57x57" href="../../media/favicon/apple-icon-57x57.png">
@@ -31,7 +30,6 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="../../media/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-
 
     <!--font awesome cdn for social Buttons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -55,6 +53,7 @@
               About
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="../About/About_Landing_Page.html">About BUGSS</a>
               <a class="dropdown-item" href="../About/Donors_and_Sponsors.html">Donors and Sponsors</a>
               <a class="dropdown-item" href="../About/FAQs.html">FAQ</a>
             </div>
@@ -67,6 +66,7 @@
               Group Projects
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="../Projects/Projects_Landing.html">Group Projects Home</a>
               <a class="dropdown-item" href="../Projects/Scramble_Synthetic_Yeast.html">Scramble and Synthetic Yeast</a>
               <a class="dropdown-item" href="../Projects/Barcoding_The_Harbor.php">Barcoding The Harbor</a>
             </div>
@@ -90,7 +90,6 @@
         </form>-->
       </div>
     </nav>
-
 
     <ul class="nav nav-fill nav-pills bg-primary" id="pills-tab" role="tablist">
       <li class="nav-item">
@@ -368,8 +367,10 @@
         </div>
       </div>
     </footer>
-  <script src="../../js/eventbriteCommunity.js"></script>
-  <script>getEventList()</script>
+    <script src="../../js/eventbriteCommunity.js"></script>
+    <script>
+      getEventList()
+    </script>
   </body>
 
 </html>
