--- a/html/About/Donors_and_Sponsors.html
+++ b/html/About/Donors_and_Sponsors.html
@@ -61,6 +61,7 @@
               Group Projects
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="../Projects/Projects_Landing.html">Group Projects Home</a>
               <a class="dropdown-item" href="../Projects/Scramble_Synthetic_Yeast.html">Scramble and Synthetic Yeast</a>
               <a class="dropdown-item" href="../Projects/Barcoding_The_Harbor.php">Barcoding The Harbor</a>
             </div>
@@ -78,10 +79,7 @@
             <a class="nav-link" href="../Support/Support_Us_Landing.html">Support Us</a>
           </li>
         </ul>
-        <!--<form class="form-inline" method="get" action="../search.php">
-          <input class="form-control mr-sm-2" type="search" name="query" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>-->
+
       </div>
     </nav>
     <ul class="nav nav-fill nav-pills bg-primary">
@@ -96,7 +94,7 @@
     <div class="container "style="position:center;" >
         <div class="jumbotron bg-primary shadow">
           <div class="lead text-light">
-            <p> We appreciate all of our donors and couldn’t do what we do without the amazing support of our community. Thanks! </p>    
+            <p> We appreciate all of our donors and couldn’t do what we do without the amazing support of our community. Thanks! </p>
           </div>
         </div>
     </div>
