--- a/html/Projects/Projects_Landing.html
+++ b/html/Projects/Projects_Landing.html
@@ -53,7 +53,7 @@
               About
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="../About/Donors_and_Sponsors.html">Donors and Sponsors</a>
+              <a class="dropdown-item" href="../About/About_Landing_Page.html">About BUGSS</a><a class="dropdown-item" href="../About/Donors_and_Sponsors.html">Donors and Sponsors</a>
               <a class="dropdown-item" href="../About/FAQs.html">FAQ</a>
             </div>
           </li>
