--- a/html/Support/Support_Us_Landing.html
+++ b/html/Support/Support_Us_Landing.html
@@ -62,6 +62,7 @@
               About
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="../About/About_Landing_Page.html">About BUGSS</a>
               <a class="dropdown-item" href="../About/Donors_and_Sponsors.html">Donors and Sponsors</a>
               <a class="dropdown-item" href="../About/FAQs.html">FAQ</a>
             </div>
@@ -69,10 +70,14 @@
           <li class="nav-item">
             <a class="nav-link" href="../Membership/Membership_Landing.html">Membership</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../Projects_Landing_page.html">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="../Projects/Projects_Landing.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Group Projects
             </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="../Projects/Projects_Landing.html">Group Projects Home</a><a class="dropdown-item" href="../Projects/Scramble_Synthetic_Yeast.html">Scramble and Synthetic Yeast</a>
+              <a class="dropdown-item" href="../Projects/Barcoding_The_Harbor.php">Barcoding The Harbor</a>
+            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../Scientists/Scientists_Landing.html">For Scientists</a>
